// Vitest Snapshot v1

exports[`ListDOMSerializer > can serialize list nodes into <ol> 1`] = `
<DocumentFragment>
  <ol>
    <li
      class="flat-list"
      data-list=""
      data-list-type="ordered"
    >
      <div
        class="item-content-container"
      >
        <p>
          A
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="ordered"
    >
      <div
        class="item-content-container"
      >
        <p>
          B
        </p>
      </div>
    </li>
  </ol>
</DocumentFragment>
`;

exports[`ListDOMSerializer > can serialize list nodes into <ul> 1`] = `
<DocumentFragment>
  <ul>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="item-content-container"
      >
        <p>
          A
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="item-content-container"
      >
        <p>
          B
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ListDOMSerializer > can serialize list nodes with different types into a single <ul> 1`] = `
<DocumentFragment>
  <ul>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="item-content-container"
      >
        <p>
          A
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="task"
    >
      <div
        class="item-mark-container"
        contenteditable="false"
      >
        <label
          class="item-mark item-mark-task"
        >
          <input
            type="checkbox"
          />
        </label>
      </div>
      <div
        class="item-content-container"
      >
        <p>
          B
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="toggle"
    >
      <div
        class="item-mark-container"
        contenteditable="false"
      >
        <span />
      </div>
      <div
        class="item-content-container"
      >
        <p>
          C
        </p>
      </div>
    </li>
  </ul>
  <ol>
    <li
      class="flat-list"
      data-list=""
      data-list-type="ordered"
    >
      <div
        class="item-content-container"
      >
        <p>
          D
        </p>
      </div>
    </li>
  </ol>
  <ul>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="item-content-container"
      >
        <p>
          D
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="task"
    >
      <div
        class="item-mark-container"
        contenteditable="false"
      >
        <label
          class="item-mark item-mark-task"
        >
          <input
            type="checkbox"
          />
        </label>
      </div>
      <div
        class="item-content-container"
      >
        <p>
          E
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="toggle"
    >
      <div
        class="item-mark-container"
        contenteditable="false"
      >
        <span />
      </div>
      <div
        class="item-content-container"
      >
        <p>
          D
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ListDOMSerializer > can serialize nested list node  1`] = `
<DocumentFragment>
  <ul>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="item-content-container"
      >
        <p>
          A
        </p>
        <ol>
          <li
            class="flat-list"
            data-list=""
            data-list-type="ordered"
          >
            <div
              class="item-content-container"
            >
              <p>
                B
              </p>
            </div>
          </li>
          <li
            class="flat-list"
            data-list=""
            data-list-type="ordered"
          >
            <div
              class="item-content-container"
            >
              <p>
                C
              </p>
            </div>
          </li>
        </ol>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="item-content-container"
      >
        <p>
          D
        </p>
        <ol>
          <li
            class="flat-list"
            data-list=""
            data-list-type="ordered"
          >
            <div
              class="item-content-container"
            >
              <p>
                E
              </p>
            </div>
          </li>
          <li
            class="flat-list"
            data-list=""
            data-list-type="ordered"
          >
            <div
              class="item-content-container"
            >
              <p>
                F
              </p>
            </div>
          </li>
        </ol>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
